--- a/noticia.html
+++ b/noticia.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Buzz News</title>
+        <title>Kogui News</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="css/style.css" type="text/css">
     </head>
